<resources>
    <string name="app_name">AndroidAcademy</string>

    <string name="movie_details_back">back</string>
    <string name="movie_details_pg_rating">13+</string>
    <string name="movie_details_name">Avengers:\nEnd Game</string>
    <string name="movie_details_tagline">Action, Adventure, Fantasy</string>
    <string name="movie_details_storyline">Storyline</string>
    <string name="movie_details_description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="movie_details_cast">Cast</string>
    <string name="movie_details_cast_picture_1_name">Robert Downey Jr.</string>
    <string name="movie_details_cast_picture_2_name">Chris Evans</string>
    <string name="movie_details_cast_picture_3_name">Mark Ruffalo</string>
    <string name="movie_details_cast_picture_4_name">Chris Hemsworth</string>
</resources>